cleanup and force auto-restart